--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -60,19 +60,19 @@
                 <div id="content-2">
                     <form class="new-user-form">
                         <label class="new-user-label" for="firstName">First name</label>
-                        <input type="text" id="firstName" name="firstName"><br>
+                        <input type="text" id="firstName" name="firstName" required><br>
 
                         <label for="lastName">Last name</label>
-                        <input type="text" id="lastName" name="lastName"><br>
+                        <input type="text" id="lastName" name="lastName" required><br>
 
                         <label for="age">Age</label>
-                        <input type="text" id="age" name="age"><br>
+                        <input type="text" id="age" name="age" required><br>
 
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="email"><br>
+                        <input type="email" id="email" name="email" required><br>
 
                         <label for="password">Password</label>
-                        <input type="text" id="password" name="password"><br>
+                        <input type="text" id="password" name="password" required><br>
 
                         <label for="role">Role</label>
                         <select id="role" name="role">
