--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -66,7 +66,7 @@
                         <input type="text" id="lastName" name="lastName" required><br>
 
                         <label for="age">Age</label>
-                        <input type="text" id="age" name="age" required><br>
+                        <input type="number" pattern="\d*" id="age" name="age" required><br>
 
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" required><br>
